--- a/TheNews/src/assets/styles/style.scss
+++ b/TheNews/src/assets/styles/style.scss
@@ -12,6 +12,7 @@
 @import "./inc/ui/button";
 @import "./inc/ui/card";
 @import "./inc/ui/form";
+@import "./inc/ui/button";
 
 /* Media */
 @import "./inc/media/1600";
