--- a/TheNews/src/assets/styles/inc/layouts/_header.scss
+++ b/TheNews/src/assets/styles/inc/layouts/_header.scss
@@ -1,1 +1,13 @@
 @import "../global/variables";
+
+#header{
+  padding: 10px 0;
+  //box-shadow: 0 0 0 5px #757575;
+
+  border-bottom: solid 1px #757575;
+  .header-links{
+    a{
+      margin-right: 15px;
+    }
+  }
+}
